--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
       </div>
    </nav>
 
+<header>
+  
+   <h1>Fleuriste</h1>
+   <h4>Toutes les fleures dont vous aurez besoin</h4>
+   <button>Parcourire</button>
+
+</header>
+
 
 
 
