--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
    <nav>
       <h1>Fleuriste</h1>
       <div class="onglets">
@@ -23,7 +24,7 @@
   
    <h1>Fleuriste</h1>
    <h4>Toutes les fleures dont vous aurez besoin</h4>
-   <button>Parcourire</button>
+   <button onclick="window.location.href = 'https://www.amazon.fr/s?k=fleure&__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=31ZR91XLXM9P7&sprefix=fleur%2Caps%2C122&ref=nb_sb_noss_1';">Parcourire</button>
 
 </header>
 
