--- a/index.html
+++ b/index.html
@@ -14,19 +14,89 @@
    <nav>
       <h1>Fleuriste</h1>
       <div class="onglets">
-<a href="">Home</a>
-<a href="">Nous contacter</a>
+         <a href="#Produits">Produits</a>
+         <a href="#Contact">Nous contacter</a>
 
       </div>
    </nav>
 
-<header>
-  
-   <h1>Fleuriste</h1>
-   <h4>Toutes les fleures dont vous aurez besoin</h4>
-   <button onclick="window.location.href = 'https://www.amazon.fr/s?k=fleure&__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=31ZR91XLXM9P7&sprefix=fleur%2Caps%2C122&ref=nb_sb_noss_1';">Parcourire</button>
+   <header>
 
-</header>
+      <h1>Fleuriste</h1>
+      <h4>Toutes les fleures dont vous aurez besoin</h4>
+      <button
+         onclick="window.location.href = 'https://www.amazon.fr/s?k=fleure&__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=31ZR91XLXM9P7&sprefix=fleur%2Caps%2C122&ref=nb_sb_noss_1';">Parcourire</button>
+
+   </header>
+
+   <section class="main" id="Produits">
+
+      <div class="content">
+         <div class="card">
+            <div class="left">
+               <h1>Nos valeurs</h1>
+               <p>Les belle couleurs et la bonne odeur des fleurs appaise c'est pour cela que nous voulont en faire profiter le maximum de personne</p>
+
+
+            </div>
+
+
+            <div class="right"> 
+               <img src="https://www.aquaportail.com/pictures1106/anemone-clown_1307889811-fleur.jpg" alt="">
+
+
+            </div>
+
+
+         </div>
+         <div class="content">
+            <div class="card">
+               <div class="left">
+                  <h1>Disponibilité</h1>
+                  <p>Selon les saisons la disponibilité des fleures que nous vendont varie</p>
+   
+   
+               </div>
+   
+   
+               <div class="right"> 
+                  <img src="https://www.officedesfleurs.fr/sites/default/files/bbh_12maanden_bloemen03282018_2med.jpg" alt="">
+   
+   
+               </div>
+   
+   
+            </div>
+   
+
+      </div>
+
+
+
+   </section>
+
+   <footer>
+      <h1>Nos Services</h1>
+      <div class="Services"> 
+         <div class="Service"> 
+            <h1>Livraison</h1> 
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+         </div>
+
+         <div class="Service">  
+            <h1>Remboursements</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+         </div>
+
+         <div class="Service">  
+            <h1>Informations</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+         </div>  
+
+      </div>
+      <p id="Contact"> </p>
+
+   </footer>
 
 
 
