Home presque finis

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <nav>
-        <h1>Fleuriste</h1>
+        <div id="titre"> 花 <span id="titre2">Fleuriste</span> 花</div>
         <div class="onglets">
             <a href="#Produits">Produits</a>
             <a href="#Contact">Nous contacter</a>
@@ -22,7 +22,7 @@
 
     <header>
 
-        <h1>Fleuriste</h1>
+        <h1> Fleuriste </h1>
         <h4>Toutes les fleures dont vous aurez besoin</h4>
         <button onclick="window.location.href = 'parcourire.html';">Parcourire</button>
 
@@ -32,43 +32,39 @@
 
         <div class="content">
             <div class="card">
-                <div class="left">
+                <div id="left">
                     <h1>Nos valeurs</h1>
-                    <p>Les belle couleurs et la bonne odeur des fleurs appaise c'est pour cela que nous voulont en faire profiter le maximum de personne</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                        specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+                        passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                </div>
+                <div id="right">
+                </div>
+
+
+            </div>
+        </div>
+        <div class="content">
+            <div class="card">
+                <div id="left">
+                    <h1>Disponibilité</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                        specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+                        passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
 
 
                 </div>
 
 
-                <div class="right">
-                    <img src="https://www.aquaportail.com/pictures1106/anemone-clown_1307889811-fleur.jpg" alt="">
+                <div id="droite">
 
 
                 </div>
 
 
             </div>
-            <div class="content">
-                <div class="card">
-                    <div class="left">
-                        <h1>Disponibilité</h1>
-                        <p>Selon les saisons la disponibilité des fleures que nous vendont varie</p>
-
-
-                    </div>
-
-
-                    <div class="right">
-                        <img src="https://www.officedesfleurs.fr/sites/default/files/bbh_12maanden_bloemen03282018_2med.jpg" alt="">
-
-
-                    </div>
-
-
-                </div>
-
-
-            </div>
+        </div>
 
 
 
