--- a/parcourire.html
+++ b/parcourire.html
@@ -6,10 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parcourire</title>
+    <link rel="stylesheet" href="parcourire.css">
 </head>
 
 <body>
-    <h1>Nos Fleures</h1>
+
+    <nav>
+        <div id="titre"> 花 <span id="titre2">Fleuriste</span> 花</div>
+        <div class="onglets">
+            <button onclick="window.location.href = 'index.html';">Home</button>
+
+
+        </div>
+    </nav>
 
 
 
