--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <nav>
         <div id="titre"> 花 <span id="titre2">Fleuriste</span> 花</div>
         <div class="onglets">
-            <a href="#Produits">Produits</a>
+            <!-- <a href="parcourire.html">Parcourire</a> -->
+            <button onclick="window.location.href = 'parcourire.html';">Parcourire</button>
             <a href="#Contact">Nous contacter</a>
 
         </div>
@@ -24,7 +25,7 @@
 
         <h1> Fleuriste </h1>
         <h4>Toutes les fleures dont vous aurez besoin</h4>
-        <button onclick="window.location.href = 'parcourire.html';">Parcourire</button>
+        <!-- <button onclick="window.location.href = 'parcourire.html';">Parcourire</button> -->
 
     </header>
 
