--- a/concevoir2.html
+++ b/concevoir2.html
@@ -25,7 +25,7 @@
 
         <h1> Fleuriste </h1>
         <h4>Toutes les fleures dont vous aurez besoin</h4>
-        <!-- <button onclick="window.location.href = 'parcourire.html';">Parcourire</button> -->
+        <button onclick="window.location.href = 'parcourire.html';">Parcourire</button>
 
     </header>
 
