--- a/parcourire.html
+++ b/parcourire.html
@@ -14,28 +14,77 @@
     <nav>
         <div id="titre"> 花 <span id="titre2">Fleuriste</span> 花</div>
         <div class="onglets">
-            <button onclick="window.location.href = 'index.html';">Home</button>
+            <button onclick="window.location.href = 'concevoir2.html';">Home</button>
 
 
         </div>
     </nav>
 
-    <div class="Liste" >  
-        <h1>Fleures</h1>
-        <p>Listes des fleures disponible</p>
-        <ul>
-            <li>fleure 1</li> <img src="https://emova-monceaufleurs-fr-storage.omn.proximis.com/Imagestorage/images/2560/1600/5f6dbfaf6c522_visuel2_1_.jpg" alt=""> <p id="description" >It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-            <li>fleure 2</li> <img src="https://emova-monceaufleurs-fr-storage.omn.proximis.com/Imagestorage/images/2560/1600/5f6dbfaf6c522_visuel2_1_.jpg" alt=""> <p id="description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-            <li>fleure 3</li> <img src="https://emova-monceaufleurs-fr-storage.omn.proximis.com/Imagestorage/images/2560/1600/5f6dbfaf6c522_visuel2_1_.jpg" alt=""> <p id="description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-            <li>fleure 4</li> <img src="https://emova-monceaufleurs-fr-storage.omn.proximis.com/Imagestorage/images/2560/1600/5f6dbfaf6c522_visuel2_1_.jpg" alt=""> <p id="description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-            <li>fleure 5</li> <img src="https://emova-monceaufleurs-fr-storage.omn.proximis.com/Imagestorage/images/2560/1600/5f6dbfaf6c522_visuel2_1_.jpg" alt=""> <p id="description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-            <li>fleure 6</li> <img src="https://emova-monceaufleurs-fr-storage.omn.proximis.com/Imagestorage/images/2560/1600/5f6dbfaf6c522_visuel2_1_.jpg" alt=""> <p id="description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+    <div class="Liste">
+        <div class="Titre">
+            <h1>Nos fleures</h1>
+            <p>Listes des fleures disponible</p>
+        </div>
+
+        <section class="main">
+
+            <div class="cards">
+
+                <div class="card">
+                    <div class="card-image">
+                        <img src="https://cdn.radiofrance.fr/s3/cruiser-production/2021/06/a82e36ea-c957-488e-a03c-f51171e61886/1200x680_code-couleur-fleurs-strelitzia-reginae-oiseau-paradis.jpg"
+                            alt="">
+                    </div>
+                    <div class="card-header">
+                        <h1 class="title">Fleures 1</h1>
+                        <h1 class="price">999€</h1>
+
+                    </div>
+
+                    <div class="card-body">
+                        <p>Lorem Ipsum is simply dummy text of the printing
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="https://cdn.radiofrance.fr/s3/cruiser-production/2021/06/a82e36ea-c957-488e-a03c-f51171e61886/1200x680_code-couleur-fleurs-strelitzia-reginae-oiseau-paradis.jpg"
+                            alt="">
+                        <div class="card-header">
+                            <h1 class="title">Fleures 1</h1>
+                            <h1 class="price">999€</h1>
+
+                        </div>
+
+                        <div class="card-body">
+                            <p>Lorem Ipsum is simply dummy text of the printing
+                            </p>
+                        </div>
+                        <div class="card">
+                            <img src="https://cdn.radiofrance.fr/s3/cruiser-production/2021/06/a82e36ea-c957-488e-a03c-f51171e61886/1200x680_code-couleur-fleurs-strelitzia-reginae-oiseau-paradis.jpg"
+                                alt="">
+                            <div class="card-header">
+                                <h1 class="title">Fleures 1</h1>
+                                <h1 class="price">999€</h1>
+
+                            </div>
+
+                            <div class="card-body">
+                                <p>Lorem Ipsum is simply dummy text of the printing
+                                </p>
+                            </div>
+
+
+                        </div>
+
+
+                    </div>
 
 
 
-        </ul>
-    
-    
+        </section>
+
+
+
+
     </div>
 
 
