--- a/parcourire.html
+++ b/parcourire.html
@@ -14,7 +14,7 @@
     <nav>
         <div id="titre"> 花 <span id="titre2">Fleuriste</span> 花</div>
         <div class="onglets">
-            <button onclick="window.location.href = 'info.html';">Home</button>
+            <button onclick="window.location.href = 'concevoir2.html';">Home</button>
 
 
         </div>
