--- a/concevoir2.html
+++ b/concevoir2.html
@@ -15,7 +15,7 @@
         <div id="titre"> 花 <span id="titre2">Fleuriste</span> 花</div>
         <div class="onglets">
             <!-- <a href="parcourire.html">Parcourire</a> -->
-            <button onclick="window.location.href = 'parcourire.html';">Parcourire</button>
+            <button onclick="window.location.href = 'parcourire.html';">Parcourir</button>
             <a href="#Contact">Nous contacter</a>
 
         </div>
