--- a/concevoir2.html
+++ b/concevoir2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fleuriste</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="concevoir2.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <div id="titre"> 花 <span id="titre2">Fleuriste</span> 花</div>
         <div class="onglets">
             <!-- <a href="parcourire.html">Parcourire</a> -->
-            <button onclick="window.location.href = 'parcourire.html';">Parcourir</button>
+            <button onclick="window.location.href = 'parcourir.html';">Parcourir</button>
             <a href="#Contact">Nous contacter</a>
 
         </div>
@@ -24,8 +24,8 @@
     <header>
 
         <h1> Fleuriste </h1>
-        <h4>Toutes les fleures dont vous aurez besoin</h4>
-        <button onclick="window.location.href = 'parcourire.html';">Parcourire</button>
+        <h4>Toutes les fleurs dont vous aurez besoin</h4>
+        <!-- <button onclick="window.location.href = 'parcourire.html';">Parcourire</button> -->
 
     </header>
 
