--- a/info.html
+++ b/info.html
@@ -15,7 +15,7 @@
         <div id="titre"> 花 <span id="titre2">Fleuriste</span> 花</div>
         <div class="onglets">
             <!-- <a href="parcourire.html">Parcourire</a> -->
-            <button onclick="window.location.href = 'parcourire.html';">Parcourir</button>
+            <button onclick="window.location.href = 'parcourir.html';">Parcourir</button>
             <a href="concevoir2.html">Home</a>
 
         </div>
@@ -93,6 +93,35 @@
 
 
 </html>
+
+<footer>
+    <h1>Nos Services</h1>
+    <div class="Services">
+        <div class="Service">
+            <h2>Livraison</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+                book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and
+                more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+
+        <div class="Service">
+            <h2>Remboursements</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+                book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and
+                more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+
+        <div class="Service">
+            <h2>Informations</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+                book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and
+                more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+
+    </div>
+    <p id="Contact"> </p>
+
+</footer>
 
 
 
