--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
 
         <h1> Fleuriste </h1>
-        <h4>Toutes les fleures dont vous aurez besoin</h4>
+        <h4>Toutes les fleurs dont vous aurez besoin</h4>
         <!-- <button onclick="window.location.href = 'parcourire.html';">Parcourire</button> -->
 
     </header>
