--- a/parcourir.html
+++ b/parcourir.html
@@ -22,7 +22,7 @@
 
     <div class="Liste">
         <div class="Titre">
-            <h1>Nos fleures</h1>
+            <h1>Nos fleurs</h1>
             <p>Listes des fleures disponible</p>
         </div>
 
